tests/preproc_samples/valid/macroinsts/expected.mas
# Labels:
# name - address - parent



# Macroinstructions:
%i i1 {
    a;
    a | b @l;
    c;
}

%i i2 {
    a(1, 2, 3);
    !nop;
}

