tests/preproc_samples/invalid/reserved_name_usage.mas
%m b {
    !nop;
}

%mi c(1) !nop;

%i d(1, 2) {
!nop:
    !nop;
}

%i a {
c:
    !nop;
}

%i !nop {
d:
    !nop;
}
